# Springhead

./: .gitignore  .gitmodules  MakePack.bat  MakeSpidarPack.bat  Makefile  README.md  ReadMe.txt  VSVersion.props  make.header
core/: Makefile  make.func.cmake  make.header
core/doc/: LCP_non_diagonal_component_and_dv.txt
core/include/: SprBase.h  SprCollision.h  SprCreature.h  SprDefs.h  SprDevice.h  SprFoundation.h  SprFramework.h  SprGraphics.h  SprGraphicsD3D.h  SprHumanInterface.h  SprPhysics.h  SprUseClosedSrcOrNot.h  SpringheadDoc.bat  SpringheadDoc.py  UseClosedSrcOrNot.h  UseClosedSrcOrNot.h.sample  common.doxy  dailybuild_SEH_Handler.h  temp.doxy
core/ruby/: RBSpringhead.rb
core/src/: CMakeConf.txt.dist  CMakeLists.txt  CMakeLists.txt.Dev.dist  CMakeLists.txt.dist  CMakeOpts.txt.dist  CMakeSettings.txt.Dev.dist  CMakeSettings.txt.dist  CMakeTopdir.txt.dist  Makefile  Makefile.SpringheadLib  Springhead14.0.sln  Springhead15.0.sln  Springhead16.0.sln  (+18 more)
core/src/EmbPython/: Base.i  CMakeConf.txt  CMakeLists.txt  CMakeSettings.txt  Collision.i  Creature.i  EPInterpreter.cpp  EPUtility.cpp  EmbPython16.0.sln  EmbPython16.0.vcxproj  EmbPythonSwig.bat  EmbPythonSwig.py  EmbPython_RunSwig16.0.vcxproj  Foundation.i  Framework.i  HumanInterface.i  Physics.i  RunSwig_EmbPython.bat  RunSwig_EmbPython.py  SprPythonDLL.cpp  SprPythonDLL15.0.sln  SprPythonDLL16.0.sln  SprPythonDLL16.0.vcxproj  dailybuild.control
core/src/EmbPython/Utility/: EPCast.cpp  EPObject.cpp  EPObject.i  EPUTTimer.cpp
core/src/Physics/: CMakeLists.txt  CMakeLists.txt-SAVE  Makefile  PHBallJoint.cpp  PHBallJoint.h  PHBody.h  PHConstraint.cpp  PHConstraint.h  PHConstraintEngine.cpp  PHConstraintEngine.h  PHContactDetector.cpp  PHContactDetector.h  PHContactEngine.cpp  PHContactEngine.h  PHContactPoint.cpp  PHContactPoint.h  PHContactSurface.cpp  PHContactSurface.h  PHEngine.cpp  PHEngine.h  PHFemBase.h  PHFemCollision.cpp  PHFemEngine.cpp  PHFemEngine.h  PHFemMesh.cpp  PHFemMeshNew.cpp  PHFemThermo.cpp  PHFemThermo.h  PHFemVibration.cpp  PHFixJoint.cpp  PHFixJoint.h  PHGear.cpp  PHGear.h  PHHapticEngine.cpp  PHHapticEngine.h  PHHapticEngineRender.cpp  PHHapticPointer.cpp  PHHapticPointer.h  PHHapticRender.cpp  PHHapticRender.h  (+55 more)
core/src/Physics/LuGre/: PHLuGreParametersData.cpp  PHLuGreParametersData.csv  coordinateConverter.cpp  coordinateConverter.h
core/src/SprCSharp/: Base.i  CMakeLists.txt  CMakeSettings.txt  Collision.i  Creature.i  FileIO.i  Foundation.i  Framework.i  Graphics.i  HumanInterface.i  MakeDoc.py  Physics.i  SprCSharp14.0.sln  SprCSharp14.0PH.sln  SprCSharp15.0.sln  SprCSharp15.0PH.sln  SprCSharp16.0.sln  SprCSharp16.0PH.sln  SprCsSwigTest_function.sln  SprCsSwigTest_vector_array.sln
core/src/SprCSharp/Install/: CMakeLists.txt  Install.bat  Install15.0.vcxproj  Install16.0.vcxproj  Makefile.Install
core/src/SprCSharp/NameManager/: CMakeLists.txt  Makefile.NameManager  NameManager.ini  NameManager.py  NameManager.vcxproj  NameManager.vcxproj.filters  NameManager15.0.vcxproj  NameManager16.0.vcxproj  NameManagerTest.bat  SetMakePath.bat
core/src/SprCSharp/RunSwig_CSharp/: CMakeLists.txt  CSharpSwig.bat  Makefile.RunSwig_CSharp  RunSwig_CSharp.bat  RunSwig_CSharp14.0.vcxproj  RunSwig_CSharp14.0PH.vcxproj  RunSwig_CSharp15.0.vcxproj  RunSwig_CSharp15.0PH.vcxproj  RunSwig_CSharp16.0.vcxproj  RunSwig_CSharp16.0PH.vcxproj  RunSwig_Clean.bat  make_projs_file.py
core/src/SprCSharp/SprCSharp/: CMakeLists.txt  CSCollision.cs  CSFoundation.cs  CSManualFoundation.cs  CSManualFramework.cs  CSManualPhysics.cs  CSPhysics.cs  SprCSharp12.0.csproj  SprCSharp12.0PH.csproj  SprCSharp14.0.csproj  SprCSharp14.0PH.csproj  SprCSharp15.0.csproj  SprCSharp16.0.csproj  SprCSharp16.0PH.csproj  UTTimer.cs  cs_object.cs  module.wrapper.cs.prologue  wrapper.cs  wrapper_OLD.cs  wrapper_OLD_2.cs
core/src/SprCSharp/SprCSharp/OLD/: Physics.cs
core/src/SprCSharp/SprCSharp/Properties/: AssemblyInfo.cs
core/src/SprCSharp/SprCsSample/: CMakeLists.txt  Program.cs  ProgramPH.cs  SprCsSample12.0PH.csproj  SprCsSample14.0.csproj  SprCsSample14.0PH.csproj  SprCsSample15.0.csproj  SprCsSample16.0.csproj  SprCsSample16.0PH.csproj  SprCsSwigTest.bat  SprCsSwigTest.cpp  SprCsSwigTest_Physics16.0.vcxproj  SprCsSwigTest_function.cs  SprCsSwigTest_function.csproj  SprCsSwigTest_vector_array.cs  SprCsSwigTest_vector_array.csproj  SprPHFemMeshNew_For_SprCsSwigTest.h  UserTemplate.csproj.user.template
core/src/SprCSharp/SprCsSample/OLD/: Program.cs
core/src/SprCSharp/SprCsSample/Properties/: AssemblyInfo.cs
core/src/SprCSharp/SprExport/: CMakeLists.txt  CMakeOpts.txt  CSFoundation.cpp  CSUtility.h  ManualUTTimer.cpp  SprExport15.0.vcxproj  SprExport16.0.vcxproj  SprExport16.0PH.vcxproj  wrapper.cpp  wrapper_OLD.cpp
core/src/SprCSharp/SprExport/OLD/: main.cpp
core/src/SprCSharp/SprImport/: CMakeLists.txt  CSManualUTTimer.cs  SprImport10.csproj  SprImport14.0.csproj  SprImport14.0PH.csproj  SprImport15.0.csproj  SprImport16.0.csproj  SprImport16.0PH.csproj  module.wrapper.cs.prologue  wrapper.cs  wrapper_OLD.cs
core/src/SprCSharp/SprImport/Properties/: AssemblyInfo.cs
core/src/SprCSharp/TargetManager/: CMakeLists.txt  TargetManager.bat  TargetManager.vcxproj  TargetManager.vcxproj.filters  TargetManager15.0.vcxproj  TargetManager16.0.vcxproj  TargetManager16.0PH.vcxproj
db/: uuid
include/: SprBase.h  SprCollision.h  SprCreature.h  SprDefs.h  SprDevice.h  SprFileIO.h  SprFoundation.h  SprFramework.h  SprGraphics.h  SprGraphicsD3D.h  SprHIS.h  SprHumanInterface.h  SprPhysics.h  Springhead.h  SpringheadDoc.bat  TempDoc.bat  UseClosedSrcOrNot.h  common.doxy  dailybuild_SEH_Handler.h  springhead.css  springhead.doxy  temp.doxy
ruby/: RBSpringhead.rb  sprtypemaps.i
shader/: fsbase.txt  vsbase.txt
src/: DocEN.lnk  DocJA.lnk  Makefile  ReadMe.JA.txt  Springhead.doxy  SpringheadDoc.bat  SpringheadEN.doxy  SpringheadImpDoc.bat  SpringheadJA.doxy  SpringheadLib.bat  SpringheadMacros.props  Springhead_doc.h  TempDoc.bat  example-list.txt  make.header  springhead.doxy  springheadImp.doxy  temp.doxy  unistd.h
(+3192 files in other folders)
